Closed Bug 1681166 Opened 3 years ago Closed 3 years ago

Assertion failure: have empty chain of parents! when navigating XUL content

Categories

(Core :: Disability Access APIs, defect, P1)

80 Branch
Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: morgan, Assigned: eeejay)

Details

(Whiteboard: [Mac2020_2])

Attachments

(1 file)

STR:

  1. Launch Firefox
  2. Navigate to about:preferences
  3. Launch VO

Expected: VO focuses the page content and allows you to navigate

Actual:

Assertion failure: parents1.Length() != 0 && parents2.Length() != 0 (have empty chain of parents!), at /Users/mraereschenberg/test-moz/accessible/mac/GeckoTextMarker.mm:167
#01: mozilla::a11y::GeckoTextMarkerRange::Crop(mozilla::a11y::AccessibleOrProxy const&)[/Users/mraereschenberg/test-moz/obj-x86_64-apple-darwin19.6.0/toolkit/library/build/XUL +0x56a9029]
#02: -[mozTextAccessible selection][/Users/mraereschenberg/test-moz/obj-x86_64-apple-darwin19.6.0/toolkit/library/build/XUL +0x56be3f7]
#03: -[mozTextAccessible moxSelectedTextRange][/Users/mraereschenberg/test-moz/obj-x86_64-apple-darwin19.6.0/toolkit/library/build/XUL +0x56bd5c7]
#04: -[MOXAccessibleBase accessibilityAttributeValue:][/Users/mraereschenberg/test-moz/obj-x86_64-apple-darwin19.6.0/toolkit/library/build/XUL +0x56aa711]
#05: NSAccessibilityGetObjectForAttributeUsingLegacyAPI[/System/Library/Frameworks/AppKit.framework/Versions/C/AppKit +0xf077a]

If you've already got VO enabled and then launch/navigate, this doesn't happen.

Nominating for inclusion in work for 86, but can be bumped back down if not deemed critical enough.

Priority: P2 → P1
Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/091cd8ce033f
Check selection is valid before cropping it in mozTextAccessible. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Flags: qe-verify+

I wasn't able to reproduce the issue on Firefox 85.0a1 (2020-12-07) under macOS 10.15.7 and 11.2. Here's a screen recording with what I did.

Morgan, could you please look over and see if this is fixed for you in the latest Nightly and Beta builds?

Or if there is something that I missed in the recording and can be seen, please let me know and I'll retry. Thank you!

Flags: qe-verify+
Flags: needinfo?(mreschenberg)

(In reply to Catalin Sasca, QA [:csasca] from comment #6)

I wasn't able to reproduce the issue on Firefox 85.0a1 (2020-12-07) under macOS 10.15.7 and 11.2. Here's a screen recording with what I did.

Morgan, could you please look over and see if this is fixed for you in the latest Nightly and Beta builds?

Or if there is something that I missed in the recording and can be seen, please let me know and I'll retry. Thank you!

Hi! Yes I can confirm this is fixed :) This was sort of intermittent to begin with, and normally it'd happen if I pressed cmd+, and cmd+f5 to both launch preferences and start voiceover quickly after.

Flags: needinfo?(mreschenberg)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: