Bug 1681166 - Check selection is valid before cropping it in mozTextAccessible. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D99942