accessible/mac/mozTextAccessible.mm
@@ -389,7 +389,7 @@ enum AXTextStateChangeType {
   GeckoTextMarkerRange selection =
       [static_cast<MOXTextMarkerDelegate*>(delegate) selection];
 
-  if (!selection.Crop(mGeckoAccessible)) {
+  if (!selection.IsValid() || !selection.Crop(mGeckoAccessible)) {
     // The selection is not in this accessible. Return invalid range.
     return GeckoTextMarkerRange();
   }
